--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal Online CV</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            margin: 20px 0;
+        }
+
+        th, td {
+            border: 1px solid #000;
+            padding: 12px;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
-
     <header>
         <h1>Scott Nels Quinaud</h1>
         <p>IT Student | Web Systems and Technologies</p>
     </header>
-
     <main>
         <section>
             <h2>About Me</h2>
@@ -19,7 +30,6 @@
             <p>Email: <a href="mailto:quinaud.scottnels@gmail.com">quinaud.scottnels@gmail.com</a><br>
             GitHub: <a href="https://github.com/Scott1273" target="_blank">https://github.com/Scott1273</a></p>
         </section>
-
         <section>
             <h2>Skills</h2>
             <ul>
@@ -42,7 +52,6 @@
                 </li>
             </ul>
         </section>
-
         <section>
             <h2>Education</h2>
             <table>
@@ -52,18 +61,27 @@
                     <th>Year Graduated</th>
                 </tr>
                 <tr>
-                    <th>College</th>
-                    <th>USTP – CDO Campus</th>
-                    <th>2028</th>
+                    <td>College</td>
+                    <td>USTP – CDO Campus</td>
+                    <td>2028</td>
                 </tr>
                 <tr>
-                    <th>SHS</th>
-                    <th>CDONHS-SHS</th>
-                    <th>2023</th>
+                    <td>SHS</td>
+                    <td>CDONHS-SHS</td>
+                    <td>2023</td>
+				</tr>
+                <tr>
+                    <td>CES</td>
+                    <td>FVS</td>
+                    <td>2012</td>
+				</tr>
+                <tr>
+                    <td>Kindergarten</td>
+                    <td>CHS</td>
+                    <td>2010</td>
                 </tr>
             </table>
         </section>
-
         <section>
             <h2>Projects</h2>
             <table>
@@ -84,7 +102,6 @@
                 </tr>
             </table>
         </section>
-
         <section>
             <h2>Contact Me</h2>
             <form>
@@ -95,10 +112,8 @@
             </form>
         </section>
     </main>
-
     <footer>
         <p>&copy; 2026 Scott Nels Quinaud. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
