--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <header>
+        <button id="themeToggle">Toggle Dark Mode</button>
         <h1>Scott Nels Quinaud</h1>
         <p class="subtitle">IT Student | Web Systems and Technologies</p>
     </header>
@@ -32,7 +33,8 @@
             <p>Email: <a href="mailto:quinaud.scottnels@gmail.com">quinaud.scottnels@gmail.com</a><br>
             GitHub: <a href="https://github.com/Scott1273" target="_blank">https://github.com/Scott1273</a></p>
         </section>
-        <section class="card">
+        <button id="toggleSkills">Show/Hide Skills</button>
+        <section class="card" id="skillsSection">
             <h2>Skills</h2>
             <ul>
                 <li>HTML</li>
@@ -110,7 +112,7 @@
                 <input type="text" placeholder="Name"><br><br>
                 <input type="email" placeholder="Email"><br><br>
                 <textarea placeholder="Message"></textarea><br><br>
-                <button type="submit">Send</button>
+                <button type="submit" id="submitBtn">Send</button>
             </form>
         </section>
     </div>
@@ -118,5 +120,6 @@
     <footer>
         <p>&copy; 2026 Scott Nels Quinaud. All rights reserved.</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
