--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         <section class="card">
             <h2>Contact Me</h2>
             <form>
-                <input type="text" placeholder="Name"><br><br>
-                <input type="email" placeholder="Email"><br><br>
+                <input type="text" id="name" placeholder="Name"><br><br>
+                <input type="email" id="email" placeholder="Email"><br><br>
                 <textarea placeholder="Message"></textarea><br><br>
                 <button type="submit" id="submitBtn">Send</button>
             </form>
