WSAT-M4: JavaScript interactivity added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Email: <a href="mailto:quinaud.scottnels@gmail.com">quinaud.scottnels@gmail.com</a><br>
             GitHub: <a href="https://github.com/Scott1273" target="_blank">https://github.com/Scott1273</a></p>
         </section>
-        <button id="toggleSkills">Show/Hide Skills</button>
+        <button id="themeToggle">Show/Hide Skills</button>
         <section class="card" id="skillsSection">
             <h2>Skills</h2>
             <ul>
